# pd-l2ork

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  LICENSE.html  LICENSE.md  Makefile  README.md  docker-compose.yml  patch  pdwebparty.Dockerfile  webpdl2ork.Dockerfile
.github/workflows/: build.yml
apps/Audio-Chat/: CLIENT-EXAMPLE.pd  README  client-ping.pd  server-admin.pd  tcp-audio-client.pd  tcp-audio-server.pd
apps/L2Ork-Tweeter/: CHANGELOG.txt  L2Ork-Tweeter-Lite.pd  L2Ork-Tweeter.pd  L2Orkmote-Interface.pd  L2Orkmote-Tweeter.pd
apps/L2Ork-Tweeter/admin/: Conductor-Commands.pd  DISIS-Dante-Out-Controls.pd  L2Ork-Tweeter-Teacher.pd
apps/L2Ork-Tweeter/core/: L2OrkTweet-L2Orkmote.pd  L2OrkTweet-Lite.pd  L2OrkTweet.pd  L2OrkTweetDISIS.pd  inst-lvl.pd  key-diatonic-coll.txt  lpb.pd  lrrcc.pd  net-io-coll.pd  net-io-list.pd  net-io-nlr.pd  net-io-sym-nlr.pd  net-io-sym.pd  net-io.pd  num2notes.txt  preset_node_array_custom.pd  sync-to-at.pd  sync-w-tempo-to-at.pd  wave-pick.pd
apps/L2Ork-Tweeter/demos/: coffin-dance.pd
apps/L2Ork-Tweeter/l2orkmote/: L2OrkmoteAPI.txt  l2ork_wii_jolt_filter.pd  l2orkmote-demo.pd  l2orkmote-left.preset  l2orkmote-mac-addresses.txt  l2orkmote-receive.pd  l2orkmote-right.preset  l2orkmote-send-joystick-mirror.pd  l2orkmote-send.pd  l2orkmote.pd
apps/L2Ork-Tweeter/loops/: loop-char-12-coll.txt  loop-num-115-coll.txt
apps/L2Ork-Tweeter/misc/: Black-Screen.pd  L2Ork-Tweeter-2-MadMapper-Bridge.pd  L2Ork-Tweeter-2-MadMapper.pd
apps/L2Ork-Tweeter/presets/: hub-preset-1.txt  hub-preset-111.txt  hub-preset-113.txt  hub-preset-116.txt  hub-preset-119.txt  hub-preset-121.txt  hub-preset-123.txt  hub-preset-124.txt  hub-preset-127.txt  hub-preset-13.txt  hub-preset-131.txt  hub-preset-142.txt  hub-preset-144.txt  hub-preset-146.txt  hub-preset-148.txt  hub-preset-149.txt  hub-preset-157.txt  hub-preset-158.txt  hub-preset-159.txt  hub-preset-16.txt  hub-preset-160.txt  hub-preset-162.txt  hub-preset-168.txt  hub-preset-169.txt  hub-preset-175.txt  hub-preset-176.txt  hub-preset-29.txt  hub-preset-33.txt  hub-preset-38.txt  hub-preset-39.txt  hub-preset-40.txt  hub-preset-53.txt  hub-preset-60.txt  hub-preset-62.txt  hub-preset-69.txt  hub-preset-72.txt  hub-preset-85.txt  hub-preset-91.txt  hub-preset-94.txt
apps/L2Ork-Tweeter/server/: L2Ork-Tweeter-Server-Debug.pd  L2Ork-Tweeter-Server.pd  Server-Commands-Example.pd  client-ping.pd  l2ork-tweeter-server-start-debug  l2ork-tweeter-server-start-debug-live  l2ork-tweeter-server-stop  network-update-messages-coll.txt
apps/L2Ork-Tweeter/sessions/: 0s-and-1s-apart-A-session-coll.txt  0s-and-1s-apart-AI-session-coll.txt  0s-and-1s-apart-B-session-coll.txt  0s-and-1s-apart-C-session-coll.txt  1st-beat-fall-2021-session-coll.txt  2nd-beat-fall-2021-final-session-coll.txt  3rd-beat-session-coll.txt  4th-beat-cleaned-up-session-coll.txt  4th-beat-droplets-2-session-coll.txt  4th-beat-droplets-3-session-coll.txt  4th-beat-droplets-4-session-coll.txt  4th-beat-droplets-5-session-coll.txt  4th-beat-droplets-6-session-coll.txt  4th-beat-droplets-session-coll.txt  4th-beat-final-10-session-coll.txt  4th-beat-final-2-session-coll.txt  4th-beat-final-3-session-coll.txt  4th-beat-final-4-session-coll.txt  4th-beat-final-5-session-coll.txt  (+56 more)
debuild/: Makefile
debuild/debian/: control  copyright  rules
emscripten/: .gitignore  DOCUMENTATION.md  Makefile  shell_custom.html
emscripten/pdtest/: .gitignore  Makefile  index.html  pdtest.cpp
emscripten/src/: js.cpp  js.hpp  main.cpp  overrides.c  pd.cpp  pd.hpp  webvmess.c  webvmess.h
l2ork_addons/: README  libtool.m4  tar_em_up.sh
l2ork_addons/K12/: arduino_analog_in-help.pd  arduino_analog_in.pd  arduino_analog_out-help.pd  arduino_analog_out.pd  arduino_connect-help.pd  arduino_connect.pd  arduino_digital_in-help.pd  arduino_digital_in.pd  arduino_digital_out-help.pd  arduino_digital_out.pd  float_2_midi_pitch.pd  fx_autotune-help.pd  fx_autotune.pd  fx_filter-help.pd  fx_filter.pd  fx_multitap-help.pd  fx_multitap.pd  fx_phaser-help.pd  fx_phaser.pd  fx_pitchshift-help.pd  fx_pitchshift.pd  fx_reverb-help.pd  fx_reverb.pd  instr_short1-help.pd  instr_short1.pd  instr_short2-help.pd  instr_short2.pd  instr_sustained1-help.pd  instr_sustained1.pd  instr_sustained2-help.pd  instr_sustained2.pd  logic_compare-help.pd  logic_compare.pd  logic_counter-help.pd  logic_counter.pd  logic_hit-help.pd  logic_hit.pd  logic_mapper-help.pd  logic_mapper.pd  logic_metronome-help.pd  (+108 more)
l2ork_addons/raspberry_pi/: makeall.sh  makefile.include  wiringPi.c
libpd/: CMakeLists.txt  Makefile
libpd/libpd_wrapper/: s_libpdmidi.c  z_libpd.c  z_libpd.h
libpd/samples/emscripten/pdtest/: .gitignore  Makefile  index.html  pdtest.cpp  test.pd
pd/extra/: preset_node_array.pd
pd/nw/: dialog_canvas.html  dialog_dropdown.html  dialog_external.html  dialog_gatom.html  dialog_iemgui.html  dialog_image.html  dialog_prefs.html  dialog_search.html  dialog_text.html  dive.js  index.js  package.json  pd_ascii_art.js  pd_canvas.html  pd_canvas.js  pd_menus.js  pd_shortcuts.js  pdgui.js  todo.txt
pd/src/: acinclude.m4  configure.ac  d_array.c  d_dac.c  d_delay.c  d_filter.c  d_math.c  d_misc.c  d_osc.c  d_soundfile.c  d_ugen.c  edit_all_iemguis.sh  g_all_guis.c  g_all_guis.h  g_array.c  g_bang.c  g_canvas.c  g_canvas.h  g_clone.c  g_editor.c  g_graph.c  g_io.c  g_magicglass.c  g_mycanvas.c  g_numbox.c  g_radio.c  g_readwrite.c  g_rtext.c  g_scalar.c  g_slider.c  g_template.c  g_text.c  g_toggle.c  g_traversal.c  g_undo.c  g_undo.h  g_vumeter.c  m_atom.c  m_binbuf.c  m_class.c  (+48 more)
runners/: docker-compose.yml  run.sh
runners/linux/: entrypoint.sh  linux.Dockerfile
scripts/: external-tests.pd  generate-libdir-metafile.sh  method_tests.pd  pd-l2ork-mode.el  regression_control.pd  regression_tests.pd  regression_tilde.pd  rtest.pd
scripts/regression_tests/: canvas_f.pd  floatsize.pd  log_0.49_compatibility.pd  pow_0.49_compatibility.pd  pow~_0.48_compatibility.pd  pow~_0.49_compatibility.pd  pow~_scalar_0.48_compatibility.pd  pow~_scalar_0.49_compatibility.pd
(+2211 files in other folders)
